<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_video_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_image_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/category_music_wrapper">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_video"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_video"
            app:srcCompat="@drawable/category_video_unselect" />
        <TextView
            android:id="@+id/category_title_video"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_video_count"
            android:text="@string/category_title_video"/>
        <TextView
            android:id="@+id/category_video_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_video"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_video" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_music_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_doc_wrapper"
        app:layout_constraintLeft_toRightOf="@id/category_video_wrapper"
        app:layout_constraintRight_toLeftOf="@+id/category_zip_wrapper">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_music"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_music"
            app:srcCompat="@drawable/category_music_unselect"/>
        <TextView
            android:id="@+id/category_title_music"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_music_count"
            android:text="@string/category_title_music"/>
        <TextView
            android:id="@+id/category_music_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_music"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_music"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_music"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_zip_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_bluetooth_wrapper"
        app:layout_constraintLeft_toRightOf="@id/category_music_wrapper"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_zip"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_zip"
            app:srcCompat="@drawable/category_zip_unselect"/>
        <TextView
            android:id="@+id/category_title_zip"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_zip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_zip_count"
            android:text="@string/category_title_zip"/>
        <TextView
            android:id="@+id/category_zip_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_zip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_zip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_zip" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_image_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_video_wrapper"
        app:layout_constraintBottom_toTopOf="@+id/category_favorite_wrapper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/category_doc_wrapper">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_image"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_image"
            app:srcCompat="@drawable/category_image_unselect"/>
        <TextView
            android:id="@+id/category_title_image"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_image_count"
            android:text="@string/category_title_image"/>
        <TextView
            android:id="@+id/category_image_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_image" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_doc_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_music_wrapper"
        app:layout_constraintBottom_toTopOf="@+id/category_usb_wrapper"
        app:layout_constraintLeft_toRightOf="@id/category_image_wrapper"
        app:layout_constraintRight_toLeftOf="@id/category_bluetooth_wrapper">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_doc"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_doc"
            app:srcCompat="@drawable/category_doc_unselect"/>
        <TextView
            android:id="@+id/category_title_doc"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_doc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_doc_count"
            android:text="@string/category_title_doc"/>
        <TextView
            android:id="@+id/category_doc_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_doc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_doc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_doc" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_bluetooth_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_zip_wrapper"
        app:layout_constraintBottom_toTopOf="@+id/category_empty"
        app:layout_constraintLeft_toRightOf="@id/category_doc_wrapper"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_bluetooth"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_bluetooth"
            app:srcCompat="@drawable/category_bluetooth_unselect"/>
        <TextView
            android:id="@+id/category_title_bluetooth"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_bluetooth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_bluetooth_count"
            android:text="@string/category_title_bluetooth"/>
        <TextView
            android:id="@+id/category_bluetooth_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_bluetooth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_bluetooth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_bluetooth" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_favorite_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_image_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/category_usb_wrapper">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_favorite"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_favorite"
            app:srcCompat="@drawable/category_favorite_unselect"/>
        <TextView
            android:id="@+id/category_title_favorite"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_favorite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_favorite_count"
            android:text="@string/category_title_favorite"/>
        <TextView
            android:id="@+id/category_favorite_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_favorite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_favorite" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/category_usb_wrapper"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_doc_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category_favorite_wrapper"
        app:layout_constraintRight_toRightOf="@+id/category_empty">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/category_icon_usb"
            style="@style/CategoryIcon"
            app:layout_constraintBottom_toTopOf="@+id/category_title_usb"
            app:srcCompat="@drawable/category_usb_unselect"/>
        <TextView
            android:id="@+id/category_title_usb"
            style="@style/CategoryTitle"
            app:layout_constraintTop_toBottomOf="@id/category_icon_usb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/category_usb_count"
            android:text="@string/category_title_usb"/>
        <TextView
            android:id="@+id/category_usb_count"
            style="@style/CategoryCount"
            app:layout_constraintTop_toBottomOf="@id/category_icon_usb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/category_title_usb"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/category_title_usb" />
    </android.support.constraint.ConstraintLayout>
    <View
        android:id="@+id/category_empty"
        style="@style/CategoryWrapper"
        app:layout_constraintTop_toBottomOf="@id/category_bluetooth_wrapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category_usb_wrapper"
        app:layout_constraintRight_toRightOf="parent">
    </View>
</android.support.constraint.ConstraintLayout>